tests/snapshots/structure__max_depth__depth_1__smoke.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--no-types
--no-traits
--no-fns
--max-depth
1

STDERR:

STDOUT:

crate smoke
├── mod derives: pub(crate)
├── mod functions: pub(crate)
├── mod hierarchy: pub(crate)
├── mod methods: pub(crate)
├── mod target: pub(crate)
├── mod uses: pub(crate)
└── mod visibility: pub(crate)
