tests/snapshots/structure__max_depth__depth_1__smoke_structure.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--no-types
--no-traits
--no-fns
--max-depth
1

STDERR:

STDOUT:

crate smoke_structure
├── mod elit: pub(crate)
├── mod lorem: pub(crate)
└── mod sit: pub(crate)
